<resources>
    <string name="app_name">Pokemon Center</string>
    <string name="main_searchbar_text">Search Pokémon</string>
    <string name="main_title_text">What Pokémon are you looking for?</string>
    <string name="settings">Settings</string>
    <string name="main_button_pokedex">Pokédex</string>
    <string name="main_button_types">Types</string>
    <string name="main_button_natures">Natures</string>
    <string name="main_button_favorites">Favorites</string>
    <string name="main_button_generations">Generations</string>
    <string name="id">Id</string>
    <string name="genera">Genus</string>
    <string name="name">Name</string>
    <string name="Type_1">type 1</string>
    <string name="type_2">type 2</string>
    <string name="info">Info</string>
    <string name="stats">Stats</string>
    <string name="moves">Moves</string>
    <string name="pokemon_sprite">Pokemon sprite to play cry sound</string>
    <string name="evolutions">Evolutions</string>
    <string name="description">Description</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="weightvalue">WeightValue</string>
    <string name="heightvalue">HeightValue</string>
    <string name="generavalue">Genera Text</string>
    <string name="baseexperience">Experience Gain</string>
    <string name="capturerate">Capture Rate</string>
    <string name="baseexperiencevalue">Xp Value</string>
    <string name="captureratevalue">Capture Rate Value</string>
    <string name="pokeball_icon">pokeball icon</string>
    <string name="generation_debut">First Appearance</string>
    <string name="generation_text">Generation Text</string>
    <string name="greatball_icon">Greatball icon</string>
    <string name="ultraball_icon">Ultraball icon</string>
    <string name="cry_play_button">Cry Play</string>
    <string name="cry_sound">Cry Sound</string>
    <string name="hp">HP</string>
    <string name="stat_example">100</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="satk">SATK</string>
    <string name="sdef">SDEF</string>
    <string name="spd">SPD</string>
    <string name="enter_level">Enter Level</string>
    <string name="calculate_stats">Calculate Stats</string>
    <string name="disclaimer_note">*Please note that this is a beta version and does not include the effects of natures or abilities.</string>
    <string name="effectiveness">Defense Effectiveness</string>
    <string name="type">Type</string>
    <string name="multiplier"><u>x1.0</u></string>
    <string name="type_mult">"      Type"</string>
    <string name="reminder_text">*Formula = <b><small>(ATK Type Multiplier x DEF Type 1 Multiplier x ; DEF Type 2 Multiplier (if applicable))</small></b>"</string>
    <string name="multipliers_explanation">*Tap the items for a quick explanation.</string>
    <string name="list_explanation">*This list includes every move this pokemon can learn by any method.</string>
    <string name="list_sort">*This list doesn\'t have any sort method.</string>
    <string name="pp_text">PP</string>
    <string name="move_name">Move Name</string>
    <string name="types_chart">Types Chart</string>
    <string name="credit_text">Chart by u/ConfusedFlareon</string>
    <string name="character_name">name</string>
    <string name="sprite_character">sprite character</string>
    <string name="generation_role">role</string>
    <string name="generation_number">Generation I</string>
    <string name="natures_chart_description">natures chart</string>
    <string name="natures_chart_credit">Chart by https://bulbapedia.bulbagarden.net/wiki/Nature.</string>
    <string name="expand_content">Expand content</string>
    <string name="section_header">Section Header</string>
    <string name="crysound">crysound</string>
    <string name="menu">Menu</string>
    <string name="home">home</string>
    <string name="natures_chart">Natures Chart</string>
    <string name="favorite">Favorite</string>
    <string name="menu_drawer">Menu</string>
    <string name="favorites_drawer">Favorites</string>
    <string name="no_favorites_yet">No favorites yet</string>
    <string name="map_name">Map Name</string>
    <string name="evolution_tree">Evolution Tree</string>
    <string name="evolves_from">Evolves From</string>
    <string name="game_logo">game logo</string>
</resources>