<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_sound"
        android:icon="@drawable/menu_sound_icon"
        android:title="@string/crysound"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/menu_not_favorite_icon"
        android:title="@string/favorite"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/menu_home_icon"
        android:title="@string/home"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_drawer"
        android:icon="@drawable/menu_details"
        android:title="@string/menu"
        app:showAsAction="always" />

</menu>