<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/info_description"
        style="@style/DescriptionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/height"
        style="@style/LabelTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/height"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_description" />

    <TextView
        android:id="@+id/weight"
        style="@style/LabelTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"
        android:text="@string/weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/info_description" />

    <TextView
        android:id="@+id/height_value"
        style="@style/ValueTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/heightvalue"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <TextView
        android:id="@+id/weight_value"
        style="@style/ValueTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/weightvalue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <TextView
        android:id="@+id/genera"
        style="@style/LabelTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/genera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_value" />

    <TextView
        android:id="@+id/genera_value"
        style="@style/ValueTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/generavalue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genera" />

    <TextView
        android:id="@+id/base_experience"
        style="@style/LabelTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="5dp"
        android:text="@string/baseexperience"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/weight_value" />

    <TextView
        android:id="@+id/base_experience_value"
        style="@style/ValueTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/baseexperiencevalue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/base_experience" />

    <TextView
        android:id="@+id/capture_rate"
        style="@style/LabelTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/capturerate"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genera_value" />

    <TextView
        android:id="@+id/capture_rate_value"
        style="@style/ValueTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/captureratevalue"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/capture_rate" />

    <ImageView
        android:id="@+id/pokeball_icon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/pokeball_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/capture_rate_value"
        app:srcCompat="@drawable/pokeball_icon" />

    <ImageView
        android:id="@+id/greatball_icon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/greatball_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pokeball_icon"
        app:srcCompat="@drawable/greatball_icon" />

    <ImageView
        android:id="@+id/ultraball_icon"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/ultraball_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greatball_icon"
        app:srcCompat="@drawable/ultraball_icon" />


    <ProgressBar
        android:id="@+id/pokeball_rate"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:max="255"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/pokeball_icon"
        app:layout_constraintTop_toBottomOf="@+id/capture_rate_value" />

    <ProgressBar
        android:id="@+id/greatball_rate"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:max="200"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/greatball_icon"
        app:layout_constraintTop_toBottomOf="@+id/pokeball_rate" />

    <ProgressBar
        android:id="@+id/ultraball_rate"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:max="150"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@id/ultraball_icon"
        app:layout_constraintTop_toBottomOf="@+id/greatball_rate" />


    <TextView
        android:id="@+id/generation_debut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/generation_debut"
        style="@style/LabelTextStyle"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/base_experience_value"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/generation_text"
        android:layout_width="0dp"
        android:layout_marginStart="5dp"
        android:layout_height="wrap_content"
        android:text="@string/generation_text"
        style="@style/ValueTextStyle"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/generation_debut"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/cry_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:text="@string/cry_sound"
        style="@style/LabelTextStyle"
        app:layout_constraintTop_toBottomOf="@id/generation_text"
        app:layout_constraintStart_toEndOf="@id/cry_play_button"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/cry_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="?attr/colorPrimary"
        android:contentDescription="@string/cry_play_button"
        android:elevation="15dp"
        android:src="@drawable/cry_icon"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/generation_text" />

</androidx.constraintlayout.widget.ConstraintLayout>